# rusty-fhir

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
src/: fhir-generated.rs  main.rs
src/tests/: identifier_test.rs  naive_test.rs
